Added additional inputs for the youtube backgroundpicker exercise

--- a/background-picker/index.html
+++ b/background-picker/index.html
@@ -16,10 +16,19 @@
 		<img src="img/chair.png" alt="generic youtube gaming chair">
 
 		<h2>Remote</h2>
-		<ul>
+		<ul id="first">
 			<li id="purple"></li>
 			<li id="green"></li>
 			<li id="blue"></li>
+			<li id="orange"></li>
+			<li id="yellow"></li>
+		</ul>
+		<ul id="second">
+			<li id="pink"></li>
+			<li id="navyblue"></li>
+			<li id="red"></li>
+			<li id="brown"></li>
+			<li id="beige"></li>
 		</ul>
 
 		<script type="text/javascript" src="js/main.js"></script>
