--- a/class-weekend-boring/index.html
+++ b/class-weekend-boring/index.html
@@ -22,7 +22,7 @@
 
 		<button id="check" type="button" name="button">check</button>
 
-		<p class="output" id="output1"></p>
+		<!-- <p class="output" id="output1"></p> -->
 
 		<!-- <h2 id="placeToSee"></h2> -->
 
